Fix HTML structure and update image source
corrigindo bug

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="page">
     <header class="site-header">
   <div class="header-left">
-    <img src="/assest/ChatGPT Image 16 de out. de 2025, 08_14_48.png" alt="Hospital CLIPSI" class="site-logo">
+    <img src="assest/ChatGPT Image 16 de out. de 2025, 08_14_48.png" alt="Hospital CLIPSI" class="site-logo">
   </div>
 
   <div class="header-center">
@@ -92,4 +92,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
